<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_tv_time"
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center"

		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		
        
        android:gravity="center"
        
        android:text="@string/main_tv_time"
        android:textSize="50dp"
        />

    <TextView
        android:id="@+id/main_tv_message"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"

        
        android:layout_gravity="center"

        android:gravity="center"
        
        android:text="@string/main_tv_message" 
        android:textSize="25dp"
        
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/main_et_message"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"

            
            android:layout_weight="1"
            
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/main_bt_patterns"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            
            android:text="@string/main_bt_patterns" 
            android:textSize="25dp"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:layout_gravity="center"
        
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
        
        
        >

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            
            android:layout_gravity="center"
            
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/main_tv_minutes"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"

                
                android:text="@string/main_tv_minutes" 
                android:textSize="25dp"
                
                />

            <Spinner
                android:id="@+id/main_sp_minutes"
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                
                android:minWidth="200dp"
                
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            
            android:layout_gravity="center"
            
            android:layout_weight="1"
            
            >

            <TextView
                android:id="@+id/main_tv_seconds"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
                
                
                android:text="@string/main_tv_seconds" 
                android:textSize="25dp"
                
                />

            <Spinner
                android:id="@+id/main_sp_seconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:layout_gravity="center"
        
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
        
        
        >

        <Button
            android:id="@+id/main_bt_start"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="5dp"

            
            android:text="@string/main_bt_start" 
            android:textSize="25dp"
            
            android:textColor="@color/blue1"
            
            android:layout_weight="1"
            
            />

        <Button
            android:id="@+id/main_bt_stop"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="10dp"
            
            
            android:text="@string/main_bt_stop" 
            android:textSize="25dp"
            android:textColor="@color/red"
            
            android:layout_weight="1"
            
            />

    </LinearLayout>

</LinearLayout>